[package]
name = "tomllib"
version = "0.1.0"
authors = ["Joel Self <joel@dislocal.com>"]

[dependencies.nom]
git = "https://github.com/Geal/nom.git"

features = ["regexp"]
[dependencies.regex]
# Uncomment these, and comment out the regexp feature to turn on statically compiled regexes
#features = ["regexp_macros"]
#[dependencies.regex_macros]

[[bin]]
name = "tomlkit"

